--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-webpack-plugin": "4.3.0",
     "lodash": "4.17.15",
     "mini-css-extract-plugin": "0.9.0",
+    "mysql": "2.18.1",
     "node-sass": "4.14.1",
     "prop-types": "15.7.2",
     "react": "16.13.1",
